cmake_minimum_required(VERSION 3.26)
project(C__)

set(CMAKE_CXX_STANDARD 14)

add_executable(C__
        prostichislavmas/dfswo.c
        "proiz na cifri v chislo/dsa.c"
        "sum na indeks po chislo v mas/wef.c"
        "tursene s vrusht na  indeks/89y.c"
        "The biggest in str/wq.c"
        "dest to dvoichno/46wy.c"
        struct/dwsf.c
        eachcharonnewline/eachcharonnewline.c
        eachcharonnewline/eachcharonnewline.c
        eachcharonnewline/eachcharonnewline.c
        eachcharonnewline/eachcharonnewline.c
        eachcharonnewline/eachcharonnewline.c
        eachcharonnewline/eachcharonnewline.c
        macro_for_arr/macro_for_arr.c
        sravn/sravn.c
        debugg/debug.c
        COMMAND/COMMAND.c
        swap/swap.c
        sort/sort.c
        DEBYG2/debug2.c
        ARR_SIZE/ARR_SIZE.c
        ARR_syzq/arr_syze.c
        ARR_syzq/arr_syze.c
        school/person.h
        school/schoolclass.h
        school/schoolclass.h
        school/school.c
)
